--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -105,9 +105,9 @@
           &:after {
             content: '';
             display: block;
-            height: 1px;
+            height: 4px;
             width: 100%;
-            background-color: $color-white;
+            background-color: $color-malibu;
             transform: translateX(100%);
             opacity: 0;
             transition: transform .3s ease, opacity .3s ease;
@@ -127,8 +127,19 @@
     }
   }
 
-  .header__active-link {
+  &__active-link {
     color: $color-malibu;
+
+    &:after {
+      content: '';
+      display: block;
+      height: 4px;
+      width: 100%;
+      background-color: $color-malibu;
+      transform: translateX(0);
+      opacity: 0;
+      transition: transform .3s ease, opacity .3s ease;
+    }
   }
 
   &__menu-mobile {
