--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -44,7 +44,7 @@
     <div class="h1">Branding a better future</div>
     
     <p class="hero__tagline">
-      Beautiful & exceptional design for future-thinking technology that takes us to the stars
+      Startup to enterprise. Beautiful design for future-thinking technology that takes us to the stars
     </p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
