--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -49,7 +49,7 @@
 
     <div class="text-center">
       <a [routerLink]="['/work']" class="btn btn--lg btn--outline btn--light">
-        <span aria-hidden="true" class="vertical-align">💻 </span>See the work
+        See the work
       </a>
     </div>
   </div>
