--- a/src/app/global/logo/logo.component.scss
+++ b/src/app/global/logo/logo.component.scss
@@ -7,7 +7,8 @@
   &__text {
     margin-top: 0;
     margin-bottom: 10px;
-    font-family: 'KG-SummerStorm', Arial, sans-serif;
+    font-family: 'KG-SummerStorm', 'Arial', sans-serif;
+    text-transform: uppercase;
 
     &--with-slogan {
       margin-bottom: 0;
