--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -97,7 +97,7 @@
         </header>
   
         <p class="home__lead">
-          Jupiter and the Giraffe is the <strong>brand strategy</strong> and <strong>digital design studio</strong> for <strong>technology companies</strong>.
+          Jupiter and the Giraffe is <em>the</em>&nbsp;<strong>brand strategy</strong> and <strong>digital design studio</strong> for <strong>technology companies</strong>.
           We're extremely passionate about building brands who's tech will empower the lives of many and drive towards a better future.
           Our data-driven and creative insight combined with beautiful design means your brand is deployed with clarity and depth.
         </p>
@@ -149,10 +149,8 @@
     <div class="container-fluid">
       <section>
         <header>
-          <h2>
-            <div class="sr-only">Remote Brand Strategy and Design Studio - </div>
-            Creativity Without Borders
-          </h2>
+          <h2><div class="sr-only">Remote Brand Strategy and Design Studio - </div>
+            Creativity Without Borders</h2>
         </header>
 
         <p class="home__lead">
@@ -185,7 +183,7 @@
           <h2 class="text-center">Ready to Launch?</h2>
         </header>
 
-        <p class="home__lead">
+        <p>
           Enough talking, let's get right to it.
         </p>
 
