add image and new content

--- a/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
+++ b/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
@@ -87,26 +87,36 @@
     </div>
 
     <div class="row landing-page__offer">
-      <div class="col-md-6">
-        <img src="/assets/images/ebookmockup-min.png" alt="" class="img-fluid landing-page__ecover">
+      <div class="col-md-6 landing-page__ebook-wrap">
+        <img src="/assets/images/ebookmockup-min.png" alt="" class="img-fluid">
       </div>
       <section class="col-md-6" style="text-align: left">
-        <p>
-          Inside, you'll learn how to:
-        </p>
+        <h2>You get IMMEDIATE ACCESS to:</h2>
 
-        <ul class="landing-page__checklist">
-          <li>Affirm your <strong>credibility</strong> as a business</li>
-          <li>Deliver your message <strong>clearly</strong></li>
-          <li><strong>Engage with your customers</strong> on an emotional level</li>
-          <li>Build <strong>customer loyalty</strong></li>
-          <li>Choose a brand name</li>
-          <li>Design an effective logo</li>
-          <li>How/where to <strong>market yourself</strong></li>
-          <li>How/when to build a sub-brand</li>
+        <ul>
+          <li>"How To Launch An Awesome Tech Brand" <strong>Ebook</strong></li>
+          <li>5 chapter <strong>VIDEO</strong> lessons to accompany ebook with <strong>BONUS tips!</strong></li>
+          <li>5 chapter <strong>AUDIOBOOK</strong> download</li>
+          <li><strong>Monthly tips/tricks</strong> on branding and the best of Jupiter and Girafe email</li>
         </ul>
       </section>
     </div>
+
+    <h2 class="text-center">
+      Inside, you'll learn how to:
+    </h2>
+
+    <ul class="landing-page__checklist">
+      <li>Affirm your <strong>credibility</strong> as a business</li>
+      <li>Deliver your message <strong>clearly</strong></li>
+      <li><strong>Engage with your customers</strong> on an emotional level</li>
+      <li>Build <strong>customer loyalty</strong></li>
+      <li>Choose a brand name</li>
+      <li>Design an effective logo</li>
+      <li>How/where to <strong>market yourself</strong></li>
+      <li>How/when to build a sub-brand</li>
+    </ul>
+    
 
     <p>
       <b>Note:</b> <em>We will never sell, trade, spam or do anything sleazy with your information.</em>
